tests/baselines/reference/memberFunctionOverloadMixingStaticAndInstance.errors.txt
memberFunctionOverloadMixingStaticAndInstance.ts(3,12): error TS2388: Function overload must not be static.
memberFunctionOverloadMixingStaticAndInstance.ts(3,12): error TS2391: Function implementation is missing or not immediately following the declaration.
memberFunctionOverloadMixingStaticAndInstance.ts(8,5): error TS2387: Function overload must be static.
memberFunctionOverloadMixingStaticAndInstance.ts(8,5): error TS2391: Function implementation is missing or not immediately following the declaration.
memberFunctionOverloadMixingStaticAndInstance.ts(13,12): error TS2388: Function overload must not be static.
memberFunctionOverloadMixingStaticAndInstance.ts(13,12): error TS2391: Function implementation is missing or not immediately following the declaration.
memberFunctionOverloadMixingStaticAndInstance.ts(18,5): error TS2387: Function overload must be static.
memberFunctionOverloadMixingStaticAndInstance.ts(18,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== memberFunctionOverloadMixingStaticAndInstance.ts (8 errors) ====
    class C {
        foo();
        static foo(); // error
               ~~~
!!! error TS2388: Function overload must not be static.
               ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    
    class D {
        static foo();
        foo(); // error    
        ~~~
!!! error TS2387: Function overload must be static.
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    
    class E<T> {
        foo(x: T);
        static foo(x: number); // error
               ~~~
!!! error TS2388: Function overload must not be static.
               ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }
    
    class F<T> {
        static foo(x: number);
        foo(x: T); // error    
        ~~~
!!! error TS2387: Function overload must be static.
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }